{
  "version": 4,
  "terraform_version": "0.12.13",
  "serial": 38,
  "lineage": "13119cd2-bbfc-e57f-b5ff-f08a852db3c7",
  "resources": [
    {
      "mode": "data",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachments": [
              {
                "state": "available",
                "vpc_id": "vpc-02450e82c7e93c295"
              }
            ],
            "filter": [
              {
                "name": "attachment.vpc-id",
                "values": [
                  "vpc-02450e82c7e93c295"
                ]
              }
            ],
            "id": "igw-0e6ec0cc490a661c6",
            "internet_gateway_id": "igw-0e6ec0cc490a661c6",
            "owner_id": "135928476890",
            "tags": {
              "Name": "sf-igw-eng42"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0164f7ab78c076386",
            "arn": "arn:aws:ec2:eu-west-1:135928476890:instance/i-08c87281e016f911a",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "id": "i-08c87281e016f911a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ec2_terraform-sshkey",
            "monitoring": false,
            "primary_network_interface_id": "eni-0eab128b49cc479de",
            "private_dns": "ip-10-10-30-19.eu-west-1.compute.internal",
            "private_ip": "10.10.30.19",
            "public_ip": "18.203.65.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0b055fe307799c993",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01c739241a2fadbc0",
            "tags": {
              "Name": "SF-to-destroy"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05c925512aa66eee1"
            ]
          },
          "depends_on": [
            "aws_security_group.app_sg",
            "aws_subnet.app_subnet",
            "data.template_file.app_instance"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "app_route_table",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0893d2f53209542af",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e6ec0cc490a661c6",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "SF-Public-route-table"
            },
            "vpc_id": "vpc-02450e82c7e93c295"
          },
          "depends_on": [
            "data.aws_internet_gateway.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "app_route_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056006b99925779f7",
            "route_table_id": "rtb-0893d2f53209542af",
            "subnet_id": "subnet-01c739241a2fadbc0"
          },
          "depends_on": [
            "aws_route_table.app_route_table",
            "aws_subnet.app_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-05c925512aa66eee1",
            "description": "Allow traffic to pass from the private subnet to the internet",
            "egress": [],
            "id": "sg-05c925512aa66eee1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "open internet port from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "open 3000 port from london wall",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "212.161.55.68/32"
                ],
                "description": "open ssh port from london wall",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "5.64.59.34/32"
                ],
                "description": "open 3000 port from sam home",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "5.64.59.34/32"
                ],
                "description": "open ssh port from sam home",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow port 80",
            "name_prefix": null,
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SF-app_security_group"
            },
            "timeouts": null,
            "vpc_id": "vpc-02450e82c7e93c295"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-01c739241a2fadbc0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.30.0/24",
            "id": "subnet-01c739241a2fadbc0",
            "map_public_ip_on_launch": false,
            "owner_id": "135928476890",
            "tags": {
              "Name": "SF_app_subnet"
            },
            "vpc_id": "vpc-02450e82c7e93c295"
          }
        }
      ]
    }
  ]
}